# hyve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  downstream-ci.yml  test-pypi.yml
src/hyve/: cli.py  core.py  extraction.py
src/hyve/hydrostats/: stat_calc.py  stats.py
src/hyve/tools/: clim_benchmark.py  crps_stations.py
tests/: test_extraction.py  test_hydrostats.py
tools/: clim-benchmark.py  crps-stations.py
