[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hydro_analysis_toolkit"
requires-python = ">=3.10"
authors = [
    {name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int"},
]
license = { text = "Apache License Version 2.0" }
dynamic = ["version"]

dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "earthkit-data>=0.18.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[project.scripts]
    hyve-extract-timeseries = "hyve.cli:extractor_cli"
    hyve-hydrostats = "hyve.cli:stat_calc_cli"