[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hyve"
requires-python = ">=3.10"
authors = [
    {name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int"},
]
license = { text = "Apache License Version 2.0" }
dynamic = ["version"]

dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "earthkit-data>=0.18.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]
gribjump = [
    "earthkit-data[gribjump]"
]

[project.scripts]
    hyve-extract-timeseries = "hyve.cli:extractor_cli"
    hyve-hydrostats = "hyve.cli:stat_calc_cli"
    hyve-clim-benchmark = "hyve.tools.clim_benchmark:main"
    hyve-crps-stations = "hyve.tools.crps_stations:main"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
include = [ "hyve" ]
where = [ "src/" ]

[tool.setuptools_scm]
version_file = "src/hyve/_version.py"
local_scheme = "no-local-version"
